Add pet.controller
