# src/models/userModel.ts
@@ -1,9 +1,0 @@
-export interface IRequestTokenUser {
-    params: object;
-    sign: string;
-}
-
-export interface IResponseTokenUser {
-    vk_id: number;
-    token: string;
-}
