# src/swagger.json
@@ -24,22 +24,78 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"IRequestUser": {
+			"Sex": {
+				"type": "string",
+				"enum": [
+					"female",
+					"male"
+				],
+				"description": "Enums"
+			},
+			"CreationUserData": {
 				"properties": {
-					"params": {
-						"additionalProperties": false,
-						"type": "object"
+					"pets": {
+						"items": {
+							"properties": {
+								"pet_age": {
+									"type": "number",
+									"format": "double"
+								},
+								"pet_name": {
+									"type": "string"
+								},
+								"pet_sex": {
+									"$ref": "#/components/schemas/Sex"
+								},
+								"pet_id": {
+									"type": "number",
+									"format": "double"
+								}
+							},
+							"required": [
+								"pet_age",
+								"pet_name",
+								"pet_sex",
+								"pet_id"
+							],
+							"type": "object"
+						},
+						"type": "array"
 					},
-					"sign": {
+					"city": {
 						"type": "string"
+					},
+					"sex": {
+						"$ref": "#/components/schemas/Sex"
+					},
+					"description": {
+						"type": "string"
+					},
+					"age": {
+						"type": "number",
+						"format": "double"
+					},
+					"interests": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"vk_id": {
+						"type": "number",
+						"format": "double"
 					}
 				},
 				"required": [
-					"params",
-					"sign"
+					"pets",
+					"city",
+					"sex",
+					"description",
+					"age",
+					"interests",
+					"vk_id"
 				],
-				"type": "object",
-				"additionalProperties": false
+				"type": "object"
 			}
 		},
 		"securitySchemes": {
@@ -72,37 +128,6 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/apply/{apply_id}": {
-			"get": {
-				"operationId": "Get",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/IResponse"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Apply"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "apply_id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
 		"/": {
 			"get": {
 				"operationId": "Index",
@@ -130,14 +155,21 @@
 				"parameters": []
 			}
 		},
-		"/user": {
+		"/user/register": {
 			"post": {
-				"operationId": "Auth",
+				"operationId": "RegisterUser",
 				"responses": {
 					"200": {
 						"description": "OK",
 						"content": {
 							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IResponse"
+								}
+							}
+						},
+						"headers": {
+							"IResponse": {
 								"schema": {
 									"$ref": "#/components/schemas/IResponse"
 								}
@@ -165,11 +197,60 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IRequestUser"
+								"$ref": "#/components/schemas/CreationUserData"
 							}
 						}
 					}
 				}
+			}
+		},
+		"/user/{vk_id}": {
+			"get": {
+				"operationId": "GetUserID",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IResponse"
+								}
+							}
+						},
+						"headers": {
+							"IResponse": {
+								"schema": {
+									"$ref": "#/components/schemas/IResponse"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Bad Request",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "vk_id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		}
 	},
